# ═══════════════════════════════════════════════════════════════════════════════
# Project Configuration — Week 6: NAT/PAT & SDN Laboratory
# ═══════════════════════════════════════════════════════════════════════════════
# Computer Networks — ASE, CSIE | by ing. dr. Antonio Clim
#
# This file configures:
#   - Project metadata
#   - Ruff linter settings
#   - MyPy type checker settings
#   - Pytest test runner settings
#
# Contact: Issues: Open an issue in GitHub
# ═══════════════════════════════════════════════════════════════════════════════

[project]
name = "week6-nat-sdn-lab"
version = "1.2.0"
description = "Week 6 Laboratory Kit: NAT/PAT & Software-Defined Networking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["networking", "NAT", "SDN", "OpenFlow", "education", "laboratory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: System :: Networking",
]

dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# ═══════════════════════════════════════════════════════════════════════════════
# RUFF CONFIGURATION (Linter)
# ═══════════════════════════════════════════════════════════════════════════════
# Ruff is a fast Python linter written in Rust
# Documentation: https://docs.astral.sh/ruff/

[tool.ruff]
# Target Python version
target-version = "py310"

# Maximum line length
line-length = 100

# Exclude patterns
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "venv",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes (undefined names, unused imports)
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modern Python syntax)
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

# Ignore these specific rules
ignore = [
    "E501",   # Line too long (handled separately)
    "B008",   # Function call in default argument (needed for FastAPI etc)
    "B905",   # zip without strict (Python 3.10+ feature)
    "SIM108", # Use ternary operator (sometimes less readable)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can have more relaxed rules
"tests/*" = ["B011", "S101"]
# Scripts can have print statements
"scripts/*" = ["T201"]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["src", "anti_ai"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# Formatting configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ═══════════════════════════════════════════════════════════════════════════════
# MYPY CONFIGURATION (Type Checker)
# ═══════════════════════════════════════════════════════════════════════════════
# MyPy performs static type analysis
# Documentation: https://mypy.readthedocs.io/

[tool.mypy]
# Python version
python_version = "3.10"

# Type checking strictness
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Import handling
ignore_missing_imports = true

# Error output
show_error_codes = true
show_column_numbers = true

# Exclude patterns
exclude = [
    "tests/",
    "venv/",
    ".venv/",
]

# Per-module settings
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "mininet.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ryu.*"
ignore_missing_imports = true

# ═══════════════════════════════════════════════════════════════════════════════
# PYTEST CONFIGURATION (Test Runner)
# ═══════════════════════════════════════════════════════════════════════════════
# Pytest is the testing framework
# Documentation: https://docs.pytest.org/

[tool.pytest.ini_options]
# Test discovery paths
testpaths = ["tests"]

# Output options
addopts = [
    "-v",                    # Verbose output
    "--tb=short",            # Short traceback format
    "--strict-markers",      # Error on unknown markers
    "-ra",                   # Show extra test summary
]

# Minimum Python version
minversion = "7.0"

# Test file patterns
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring Docker/Mininet",
    "smoke: marks smoke tests (quick sanity checks)",
]

# ═══════════════════════════════════════════════════════════════════════════════
# COVERAGE CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "setup/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
