# ═══════════════════════════════════════════════════════════════════════════════
# Project Configuration — Week 8: Transport Layer & HTTP
# Computer Networks — ASE, CSIE
# ═══════════════════════════════════════════════════════════════════════════════

[project]
name = "week8-transport-lab"
version = "2.0.0"
description = "Computer Networks Laboratory - Week 8: Transport Layer, HTTP Servers & Reverse Proxies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["networking", "education", "http", "tcp", "docker", "laboratory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: System :: Networking",
]

dependencies = [
    "docker>=6.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "rich>=13.0.0",
]

# ═══════════════════════════════════════════════════════════════════════════════
# RUFF CONFIGURATION — Modern Python Linter & Formatter
# ═══════════════════════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py310"
line-length = 100

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    "artifacts",
    "pcap",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings  
    "F",      # Pyflakes (undefined names, unused imports)
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modern Python syntax)
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long — handled with line-length setting
    "E731",   # Lambda assignment — sometimes useful for clarity
    "B008",   # Function call in default argument — intentional in some cases
    "SIM108", # Ternary operator — if/else can be clearer
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]
"setup/*" = ["T201"]
"src/exercises/*" = ["FIX002", "TD002", "TD003"]
"homework/*" = ["FIX002", "TD002", "TD003"]

[tool.ruff.lint.isort]
known-first-party = ["src", "scripts", "tests", "formative"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ═══════════════════════════════════════════════════════════════════════════════
# MYPY CONFIGURATION — Static Type Checker
# ═══════════════════════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = false
strict_optional = true
no_implicit_optional = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "setup.*"
ignore_errors = true

# ═══════════════════════════════════════════════════════════════════════════════
# PYTEST CONFIGURATION — Test Runner
# ═══════════════════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "docker: marks tests that require Docker",
    "network: marks tests that require network access",
    "exercise1: marks tests for Exercise 1",
    "exercise2: marks tests for Exercise 2",
]

minversion = "7.0"

filterwarnings = [
    "ignore::DeprecationWarning",
]

# ═══════════════════════════════════════════════════════════════════════════════
# COVERAGE CONFIGURATION (optional)
# ═══════════════════════════════════════════════════════════════════════════════

[tool.coverage.run]
source = ["src", "scripts", "formative"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/setup/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true

# ═══════════════════════════════════════════════════════════════════════════════
# BUILD SYSTEM
# ═══════════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*", "formative*"]
