# ═══════════════════════════════════════════════════════════════════════════════
# pyproject.toml — Week 9: Session Layer and Presentation Layer
# NETWORKING class - ASE, Informatics | by ing. dr. Antonio Clim
# ═══════════════════════════════════════════════════════════════════════════════
#
# This file defines:
#   - Python version requirements
#   - Linting configuration (ruff)
#   - Project metadata
#
# ═══════════════════════════════════════════════════════════════════════════════

[project]
name = "week9-networking-lab"
version = "1.3.0"
description = "Week 9 Laboratory: Session Layer (L5) and Presentation Layer (L6)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ing. dr. Antonio Clim", email = "antonio.clim@csie.ase.ro" }
]
maintainers = [
    { name = "Revolvix" }
]
keywords = [
    "networking",
    "education",
    "ftp",
    "session-layer",
    "presentation-layer",
    "binary-protocols",
    "endianness"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: System :: Networking",
]

# ═══════════════════════════════════════════════════════════════════════════════
# PYTHON VERSION REQUIREMENT
# ═══════════════════════════════════════════════════════════════════════════════
requires-python = ">=3.10"

# ═══════════════════════════════════════════════════════════════════════════════
# DEPENDENCIES
# ═══════════════════════════════════════════════════════════════════════════════
dependencies = [
    "docker>=6.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "pyftpdlib>=1.5.7",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/antonioclim/netENwsl"
Documentation = "https://github.com/antonioclim/netENwsl/tree/main/09enWSL"
Repository = "https://github.com/antonioclim/netENwsl.git"
"Bug Tracker" = "https://github.com/antonioclim/netENwsl/issues"

# ═══════════════════════════════════════════════════════════════════════════════
# RUFF LINTER CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
[tool.ruff]
# Target Python version
target-version = "py310"

# Line length (match Black default)
line-length = 100

# Files to include
include = ["*.py"]

# Files/directories to exclude
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "*.pyc",
    ".venv",
    "venv",
    "artifacts",
    "pcap",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

# Ignore these rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top (we have path manipulation)
    "B008",   # Function call in default argument (argparse)
    "SIM108", # Use ternary operator (readability preference)
]

# Allow autofix for these rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can have longer lines and unused imports
"tests/*.py" = ["E501", "F401"]
# Scripts have path manipulation at top
"scripts/*.py" = ["E402"]

[tool.ruff.lint.isort]
# isort configuration
known-first-party = ["src", "scripts", "tests"]
force-single-line = false
lines-after-imports = 2

# ═══════════════════════════════════════════════════════════════════════════════
# PYTEST CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "docker: marks tests that require Docker",
    "network: marks tests that require network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
timeout = 60

# ═══════════════════════════════════════════════════════════════════════════════
# COVERAGE CONFIGURATION (if using pytest-cov)
# ═══════════════════════════════════════════════════════════════════════════════
[tool.coverage.run]
source = ["src", "scripts"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ═══════════════════════════════════════════════════════════════════════════════
# END OF CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
