# ═══════════════════════════════════════════════════════════════════════════════
# pyproject.toml — Week 9: Session Layer and Presentation Layer
# NETWORKING class - ASE, Informatics | by ing. dr. Antonio Clim
# ═══════════════════════════════════════════════════════════════════════════════
#
# Project configuration for Python packaging, linting and testing.
#
# Usage:
#   pip install -e .              Install in development mode
#   ruff check .                  Run linter
#   pytest                        Run tests
#
# ═══════════════════════════════════════════════════════════════════════════════

[project]
name = "week9-networking-lab"
version = "1.5.0"
description = "Computer Networks Laboratory - Week 9: Session and Presentation Layers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Antonio Clim", email = "antonio.clim@example.com"}
]
keywords = [
    "networking",
    "education",
    "ftp",
    "session-layer",
    "presentation-layer",
    "binary-protocols"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: System :: Networking",
]

dependencies = [
    "docker>=6.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "pyftpdlib>=1.5.7",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/antonioclim/netENwsl"
Documentation = "https://github.com/antonioclim/netENwsl/tree/main/09enWSL/docs"
Repository = "https://github.com/antonioclim/netENwsl"
Issues = "https://github.com/antonioclim/netENwsl/issues"

# ═══════════════════════════════════════════════════════════════════════════════
# RUFF CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.ruff]
# Target Python version
target-version = "py310"

# Line length (relaxed for educational code with long comments)
line-length = 100

# Exclude paths
exclude = [
    ".git",
    ".github",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    "artifacts",
    "pcap",
    "docker/volumes",
]

[tool.ruff.lint]
# Enable rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top (needed for sys.path manipulation)
    "B008",   # Do not perform function calls in argument defaults
    "SIM108", # Use ternary operator (sometimes less readable)
    "B904",   # Within an except clause, raise from error
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore import order in test files
"tests/*.py" = ["E402", "F401"]
"scripts/*.py" = ["E402"]
"setup/*.py" = ["E402"]
"homework/exercises/*.py" = ["F401", "E402"]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["src", "scripts", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Formatting options
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ═══════════════════════════════════════════════════════════════════════════════
# PYTEST CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "docker: marks tests that require Docker",
    "network: marks tests that require network access",
    "integration: marks integration tests",
]

# Timeout for each test (seconds)
timeout = 60

# Verbosity
addopts = "-v --tb=short"

# Coverage settings (if pytest-cov installed)
# addopts = "-v --tb=short --cov=src --cov=scripts --cov-report=term-missing"

[tool.coverage.run]
source = ["src", "scripts"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/setup/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ═══════════════════════════════════════════════════════════════════════════════
# MYPY CONFIGURATION (Optional)
# ═══════════════════════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ═══════════════════════════════════════════════════════════════════════════════
# BUILD SYSTEM
# ═══════════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

# ═══════════════════════════════════════════════════════════════════════════════
# END OF CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
