# =============================================================================
# pyproject.toml — Week 11 WSL Kit Project Configuration
# =============================================================================
# NETWORKING class - ASE, Informatics | by Revolvix
#
# This file provides:
# - Explicit Python version requirements
# - Strict dependency pinning
# - Project metadata for reproducibility
# - Tool configurations (ruff, pytest)
# =============================================================================

[project]
name = "netenwsl-week11"
version = "1.0.0"
description = "Computer Networks Laboratory - Week 11: Load Balancing & Application Protocols"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ing. dr. Antonio Clim", email = "antonio.clim@csie.ase.ro"}
]
maintainers = [
    {name = "Revolvix"}
]
keywords = [
    "networking",
    "load-balancing",
    "dns",
    "ftp",
    "ssh",
    "nginx",
    "docker",
    "education",
    "laboratory"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: System :: Networking",
]

# ─────────────────────────────────────────────────────────────────────────────
# PYTHON VERSION REQUIREMENT (STRICT)
# ─────────────────────────────────────────────────────────────────────────────
requires-python = ">=3.11,<4.0"

# ─────────────────────────────────────────────────────────────────────────────
# DEPENDENCIES (PINNED VERSIONS)
# ─────────────────────────────────────────────────────────────────────────────
dependencies = [
    "pyyaml>=6.0.1,<7.0",
    "dnspython>=2.4.0,<3.0",
]

[project.optional-dependencies]
# Full installation with all features
full = [
    "paramiko>=3.3.0,<4.0",
    "pyftpdlib>=1.5.9,<2.0",
    "requests>=2.31.0,<3.0",
]
# Development dependencies
dev = [
    "pytest>=7.4.0,<8.0",
    "pytest-cov>=4.1.0,<5.0",
    "ruff>=0.1.0,<1.0",
    "mypy>=1.5.0,<2.0",
]
# Documentation
docs = [
    "mkdocs>=1.5.0,<2.0",
    "mkdocs-material>=9.0.0,<10.0",
]

[project.urls]
Homepage = "https://github.com/antonioclim/netENwsl"
Documentation = "https://github.com/antonioclim/netENwsl/tree/main/11enWSL"
Repository = "https://github.com/antonioclim/netENwsl.git"
Issues = "https://github.com/antonioclim/netENwsl/issues"

[project.scripts]
# CLI entry points
week11-quiz = "formative.run_quiz:main"
week11-lab = "scripts.start_lab:main"
week11-verify = "setup.verify_environment:main"

# =============================================================================
# BUILD SYSTEM
# =============================================================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*", "formative*", "setup*", "tests*"]

# =============================================================================
# TOOL CONFIGURATIONS
# =============================================================================

# ─────────────────────────────────────────────────────────────────────────────
# RUFF (Linter)
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B905",   # zip without strict
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG"]  # Allow unused arguments in tests
"__init__.py" = ["F401"]  # Allow unused imports in __init__

[tool.ruff.isort]
known-first-party = ["src", "scripts", "formative"]

# ─────────────────────────────────────────────────────────────────────────────
# PYTEST
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access",
    "docker: marks tests that require Docker",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ─────────────────────────────────────────────────────────────────────────────
# MYPY (Type Checking)
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Educational code may omit some types
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ─────────────────────────────────────────────────────────────────────────────
# COVERAGE
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src", "scripts"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# =============================================================================
# Revolvix&Hypotheticalandrei
# =============================================================================
